syntax = "proto3";

package yandex.cloud.mdb.postgresql.v1.config;

import "google/protobuf/wrappers.proto";
import "yandex/cloud/validation.proto";

option go_package = "github.com/yandex-cloud/go-genproto/yandex/cloud/mdb/postgresql/v1/config;postgresql";
option java_package = "yandex.cloud.api.mdb.postgresql.v1.config";

// Options and structure of `PostgresqlConfig` reflects PostgreSQL configuration file
// parameters whose detailed description is available in
// [PostgreSQL documentation](https://www.postgresql.org/docs/9.6/static/runtime-config).
message PostgresqlConfig9_6 {
  enum WalLevel {
    WAL_LEVEL_UNSPECIFIED = 0;

    WAL_LEVEL_REPLICA = 1;

    WAL_LEVEL_LOGICAL = 2;
  }

  enum SynchronousCommit {
    SYNCHRONOUS_COMMIT_UNSPECIFIED = 0;

    SYNCHRONOUS_COMMIT_ON = 1;

    SYNCHRONOUS_COMMIT_OFF = 2;

    SYNCHRONOUS_COMMIT_LOCAL = 3;

    SYNCHRONOUS_COMMIT_REMOTE_WRITE = 4;

    SYNCHRONOUS_COMMIT_REMOTE_APPLY = 5;
  }

  enum ConstraintExclusion {
    CONSTRAINT_EXCLUSION_UNSPECIFIED = 0;

    CONSTRAINT_EXCLUSION_ON = 1;

    CONSTRAINT_EXCLUSION_OFF = 2;

    CONSTRAINT_EXCLUSION_PARTITION = 3;
  }

  enum ForceParallelMode {
    FORCE_PARALLEL_MODE_UNSPECIFIED = 0;

    FORCE_PARALLEL_MODE_ON = 1;

    FORCE_PARALLEL_MODE_OFF = 2;

    FORCE_PARALLEL_MODE_REGRESS = 3;
  }

  enum LogLevel {
    LOG_LEVEL_UNSPECIFIED = 0;

    LOG_LEVEL_DEBUG5 = 1;

    LOG_LEVEL_DEBUG4 = 2;

    LOG_LEVEL_DEBUG3 = 3;

    LOG_LEVEL_DEBUG2 = 4;

    LOG_LEVEL_DEBUG1 = 5;

    LOG_LEVEL_LOG = 6;

    LOG_LEVEL_NOTICE = 7;

    LOG_LEVEL_WARNING = 8;

    LOG_LEVEL_ERROR = 9;

    LOG_LEVEL_FATAL = 10;

    LOG_LEVEL_PANIC = 11;
  }

  enum LogErrorVerbosity {
    LOG_ERROR_VERBOSITY_UNSPECIFIED = 0;

    LOG_ERROR_VERBOSITY_TERSE = 1;

    LOG_ERROR_VERBOSITY_DEFAULT = 2;

    LOG_ERROR_VERBOSITY_VERBOSE = 3;
  }

  enum LogStatement {
    LOG_STATEMENT_UNSPECIFIED = 0;

    LOG_STATEMENT_NONE = 1;

    LOG_STATEMENT_DDL = 2;

    LOG_STATEMENT_MOD = 3;

    LOG_STATEMENT_ALL = 4;
  }

  enum TransactionIsolation {
    TRANSACTION_ISOLATION_UNSPECIFIED = 0;

    TRANSACTION_ISOLATION_READ_UNCOMMITTED = 1;

    TRANSACTION_ISOLATION_READ_COMMITTED = 2;

    TRANSACTION_ISOLATION_REPEATABLE_READ = 3;

    TRANSACTION_ISOLATION_SERIALIZABLE = 4;
  }

  enum ByteaOutput {
    BYTEA_OUTPUT_UNSPECIFIED = 0;

    BYTEA_OUTPUT_HEX = 1;

    BYTEA_OUTPUT_ESCAPED = 2;
  }

  enum XmlBinary {
    XML_BINARY_UNSPECIFIED = 0;

    XML_BINARY_BASE64 = 1;

    XML_BINARY_HEX = 2;
  }

  enum XmlOption {
    XML_OPTION_UNSPECIFIED = 0;

    XML_OPTION_DOCUMENT = 1;

    XML_OPTION_CONTENT = 2;
  }

  enum BackslashQuote {
    BACKSLASH_QUOTE_UNSPECIFIED = 0;

    BACKSLASH_QUOTE = 1;

    BACKSLASH_QUOTE_ON = 2;

    BACKSLASH_QUOTE_OFF = 3;

    BACKSLASH_QUOTE_SAFE_ENCODING = 4;
  }

  google.protobuf.Int64Value max_connections = 1;

  google.protobuf.Int64Value shared_buffers = 2; // in bytes.

  google.protobuf.Int64Value temp_buffers = 3; // in bytes.

  google.protobuf.Int64Value max_prepared_transactions = 4;

  google.protobuf.Int64Value work_mem = 5; // in bytes.

  google.protobuf.Int64Value maintenance_work_mem = 6; // in bytes.

  google.protobuf.Int64Value replacement_sort_tuples = 7;

  google.protobuf.Int64Value autovacuum_work_mem = 8; // in bytes.

  google.protobuf.Int64Value temp_file_limit = 9; // in bytes.

  google.protobuf.Int64Value vacuum_cost_delay = 10; // in milliseconds.

  google.protobuf.Int64Value vacuum_cost_page_hit = 11;

  google.protobuf.Int64Value vacuum_cost_page_miss = 12;

  google.protobuf.Int64Value vacuum_cost_page_dirty = 13;

  google.protobuf.Int64Value vacuum_cost_limit = 14;

  google.protobuf.Int64Value bgwriter_delay = 15 [(value) = "10-10000"]; // in milliseconds.

  google.protobuf.Int64Value bgwriter_lru_maxpages = 16;

  google.protobuf.DoubleValue bgwriter_lru_multiplier = 17;

  google.protobuf.Int64Value bgwriter_flush_after = 18 [(value) = "0-2097152"]; // in bytes

  google.protobuf.Int64Value backend_flush_after = 19 [(value) = "0-2097152"]; // in bytes

  google.protobuf.Int64Value old_snapshot_threshold = 20 [(value) = "-1-86400000"];

  WalLevel wal_level = 21;

  SynchronousCommit synchronous_commit = 22;

  google.protobuf.Int64Value checkpoint_timeout = 23 [(value) = "30000-86400000"]; // in milliseconds.

  google.protobuf.DoubleValue checkpoint_completion_target = 24; // Acceptable values are 0.0 to 1.0, inclusive.

  google.protobuf.Int64Value checkpoint_flush_after = 25 [(value) = "0-2097152"]; // in bytes

  google.protobuf.Int64Value max_wal_size = 26; // in bytes.

  google.protobuf.Int64Value min_wal_size = 27; // in bytes.

  google.protobuf.Int64Value max_standby_streaming_delay = 28; // in milliseconds.

  google.protobuf.Int64Value default_statistics_target = 29;

  ConstraintExclusion constraint_exclusion = 30;

  google.protobuf.DoubleValue cursor_tuple_fraction = 31;

  google.protobuf.Int64Value from_collapse_limit = 32 [(value) = "1-2147483647"];

  google.protobuf.Int64Value  join_collapse_limit = 33 [(value) = "1-2147483647"];

  ForceParallelMode force_parallel_mode = 34;

  LogLevel client_min_messages = 35;

  LogLevel log_min_messages = 36;

  LogLevel log_min_error_statement = 37;

  google.protobuf.Int64Value log_min_duration_statement = 38; // in milliseconds.

  google.protobuf.BoolValue log_checkpoints = 39;

  google.protobuf.BoolValue log_connections = 40;

  google.protobuf.BoolValue log_disconnections = 41;

  google.protobuf.BoolValue log_duration = 42;

  LogErrorVerbosity log_error_verbosity = 43;

  google.protobuf.BoolValue log_lock_waits = 44;

  LogStatement log_statement = 45;

  google.protobuf.Int64Value log_temp_files = 46;

  string search_path = 47;

  google.protobuf.BoolValue row_security = 48;

  TransactionIsolation default_transaction_isolation = 49;

  google.protobuf.Int64Value statement_timeout = 50; // in milliseconds.

  google.protobuf.Int64Value lock_timeout = 51; // in milliseconds.

  google.protobuf.Int64Value idle_in_transaction_session_timeout = 52 [(value) = "0-2147483647"]; // in milliseconds.

  ByteaOutput bytea_output = 53;

  XmlBinary xmlbinary = 54;

  XmlOption xmloption = 55;

  google.protobuf.Int64Value gin_pending_list_limit = 56; // in bytes.

  google.protobuf.Int64Value deadlock_timeout = 57; // in milliseconds.

  google.protobuf.Int64Value max_locks_per_transaction = 58;

  google.protobuf.Int64Value max_pred_locks_per_transaction = 59;

  google.protobuf.BoolValue array_nulls = 60;

  BackslashQuote backslash_quote = 61;

  google.protobuf.BoolValue default_with_oids = 62;

  google.protobuf.BoolValue escape_string_warning = 63;

  google.protobuf.BoolValue lo_compat_privileges = 64;

  google.protobuf.BoolValue operator_precedence_warning = 65;

  google.protobuf.BoolValue quote_all_identifiers = 66;

  google.protobuf.BoolValue standard_conforming_strings = 67;

  google.protobuf.BoolValue synchronize_seqscans = 68;

  google.protobuf.BoolValue transform_null_equals = 69;

  google.protobuf.BoolValue exit_on_error = 70;

  google.protobuf.DoubleValue seq_page_cost = 71;

  google.protobuf.DoubleValue random_page_cost = 72;

  // This option has been removed in PostgreSQL 10.
  google.protobuf.BoolValue sql_inheritance = 73;

  google.protobuf.Int64Value autovacuum_max_workers = 74 [(value) = "1-32"];

  google.protobuf.Int64Value autovacuum_vacuum_cost_delay = 75 [(value) = "-1-100"];

  google.protobuf.Int64Value autovacuum_vacuum_cost_limit = 76 [(value) = "-1-10000"];

  google.protobuf.Int64Value autovacuum_naptime = 77 [(value) = "1000-86400000"]; // in milliseconds.

  google.protobuf.Int64Value archive_timeout = 78 [(value) = "10000-86400000"]; // in milliseconds.

  google.protobuf.Int64Value track_activity_query_size = 79 [(value) = "100-102400"];

  google.protobuf.Int64Value effective_io_concurrency = 80 [(value) = "0-1000"];

  google.protobuf.Int64Value effective_cache_size = 81 [(value) = "0-549755813888"];
}

message PostgresqlConfigSet9_6 {
  // Effective settings for a PostgreSQL 9.6 cluster (a combination of settings defined
  // in [user_config] and [default_config]).
  PostgresqlConfig9_6 effective_config = 1 [(required) = true];

  // User-defined settings for a PostgreSQL 9.6 cluster.
  PostgresqlConfig9_6 user_config = 2;

  // Default configuration for a PostgreSQL 9.6 cluster.
  PostgresqlConfig9_6 default_config = 3;
}
